style changes to landing, header and footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
 					<a href="/" style="background-image: url('/images/{{ index $.Site.Data.images.hash "tropyc-logo.png" }}');">tropyc.</a>
 				</div>
 			</div>
-			<div class="col-sm-6 col-md-3">
+			<div class="col-sm-6 col-md-2">
 				<h3 class="footer-nav-title">Company</h3>
 				<ul class="footer-nav">
 					<li><a href="/contact/">Contact</a></li>
@@ -14,18 +14,18 @@
 					<li><a href="/legal/">Legal</a></li>
 				</ul>
 			</div>
-			<div class="col-sm-6 col-md-3">
+			<div class="col-sm-6 col-md-2">
 				<h3 class="footer-nav-title">Useful Links</h3>
 				<ul class="footer-nav">
 					<li><a href="/rating-framework/">Rating framework</a></li>
 					<li><a href="/disclaimer/">Disclaimer</a></li>
 				</ul>
 			</div>
-			<div class="col-sm-12 col-md-3 col-social">
+			<div class="col-sm-12 col-md-5 col-social">
 				<ul class="footer-nav">
-					<li class="text-center"><a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><i class="fa fa-telegram fa-2x" aria-hidden="true"></i></a></li>
-					<li class="text-center"><a href="https://t.me/{{.Site.Params.facebook}}" target="_blank"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-					<li class="text-center"><a href="https://t.me/{{.Site.Params.twitter}}" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
+					<li class="text-center"><a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><i class="fa fa-telegram fa-2x" aria-hidden="true"></i>Join our Telegram</a></li>
+					<li class="text-center"><a href="https://t.me/{{.Site.Params.facebook}}" target="_blank"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i>Like our Facebook</a></li>
+					<li class="text-center"><a href="https://t.me/{{.Site.Params.twitter}}" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i>Follow us on Twitter</a></li>
 				</ul>
 			</div>
 		</div>
