--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,19 +11,19 @@
 </div>
 <div class="features">
 	<div class="featurebox">
-		<img class="feature-image" src="/images/{{ index $.Site.Data.images.hash "icons/live-chat.png" }}">
-		<div class="feature-name">Live chat</div>
-		<div class="feature-detail">Enjoy a 7/7 crypto experience with your personal analysts.</div>
+		<img src="/images/{{ index $.Site.Data.images.hash "icons/live-chat.png" }}">
+		<h2>Live chat</h2>
+		<p>Enjoy a 7/7 crypto experience with your personal analysts.</p>
 	</div>
 	<div class="featurebox">
-		<img class="feature-image" src="/images/{{ index $.Site.Data.images.hash "icons/tokensale.png" }}">
-		<div class="feature-name">Tokensale rating</div>
-		<div class="feature-detail">Access our token due diligence based on fundamentals.</div>
+		<img src="/images/{{ index $.Site.Data.images.hash "icons/tokensale.png" }}">
+		<h2>Tokensale rating</h2>
+		<p>Access our token due diligence based on fundamentals.</p>
 	</div>
 	<div class="featurebox">
-		<img class="feature-image" src="/images/{{ index $.Site.Data.images.hash "icons/education.png" }}">
-		<div class="feature-name">Education</div>
-		<div class="feature-detail">Store your coins safely, find your exchange or design your portfolio.</div>
+		<img src="/images/{{ index $.Site.Data.images.hash "icons/education.png" }}">
+		<h2>Education</h2>
+		<p>Store your coins safely, find your exchange or design your portfolio.</p>
 	</div>
 </div>
 <div class="title">
@@ -33,9 +33,6 @@
 </div>
 <div class="container instructions">
 	<div class="row">
-		<div class="col-sm-6">
-			<img class="img-fluid rounded mx-auto d-block mb-2" src="http://via.placeholder.com/400x400">
-		</div>
 		<div class="col-sm-6 stepbystep">
 			<div class="step">
 				<h3>Learn</h3>
@@ -50,6 +47,9 @@
 				<p>Get your personal crypto analyst 7/7 to learn, invest, design your portfolio and get alerts.</p>
 			</div>
 		</div>
+		<div class="col-sm-6">
+			<img class="img-fluid rounded mx-auto d-block mb-2" src="http://via.placeholder.com/400x400">
+		</div>
 	</div>
 </div>
 <div class="title">
@@ -59,6 +59,9 @@
 </div>
 <div class="container funding-comparison">
 	<div class="row">
+		<div class="col-sm-6">
+			<img class="img-fluid rounded mx-auto d-block mt-3" src="http://via.placeholder.com/600x400">
+		</div>
 		<div class="col-sm-6 comparison-points">
 			<div class="point">
 				<h3>Revolution</h3>
@@ -72,9 +75,6 @@
 				<h3>Scored</h3>
 				<p>Tropyc evaluates and filters tokensales before listing. We undertake a thorough analysis based on fundamentals.</p>
 			</div>
-		</div>
-		<div class="col-sm-6">
-			<img class="img-fluid rounded mx-auto d-block mt-3" src="http://via.placeholder.com/600x400">
 		</div>
 	</div>
 </div>
