--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -100,11 +100,11 @@ $pink:   #ff5b77 !default;
 $purple: #9b59b6 !default;
 
 // Create grayscale
-$gray-dark:                 rgba(0,0,0,.8) !default;
-$gray:                      #95a5a6 !default;
-$gray-light:                #bdc3c7 !default;
-$gray-lighter:              #ecf0f1 !default;
-$gray-lightest:             #ecf0f1 !default;
+$gray-dark:                 #292b2c !default;
+$gray:                      #464a4c !default;
+$gray-light:                #636c72 !default;
+$gray-lighter:              #eceeef !default;
+$gray-lightest:             #f7f7f9 !default;
 
 // Reassign color vars to semantic color scheme
 $brand-primary:             #2ecc71;
