--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,8 +14,9 @@
 @import 'components/exchange-card';
 @import 'components/pagination';
 @import 'pages/landing';
-@import 'pages/news';
-@import 'pages/token-sales';
-@import 'pages/token-detail';
+@import 'pages/news-list';
+@import 'pages/news-single';
+@import 'pages/token-sales-list';
+@import 'pages/tokens-single';
 @import 'layout/header';
 @import 'layout/footer';
