--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -1,27 +1,37 @@
 {{ define "title"}} {{ .Title}} {{end}}
 {{ define "header"}} {{ partial "header" .}} {{end}}
 
-{{ define "main"}}
-<div class="container">
-  <div class="push-center" itemscope itemtype="http://schema.org/BlogPosting">
-      {{ template "_internal/schema.html" . }}
-    <div class="hero">
-        <h1 itemprop="headline">  {{.Title}}</h1>
-        {{ if .Description }}
-    <blockquote itemprop="description">{{ .Description }}</blockquote>
-    {{ end }}
-    <time class="post-time">{{ partial "post/meta" . }}</time>
-    </div>
-    <div class="post-box">
-      <div class="post" itemprop="articleBody">
+{{ define "main" }}
 
-          {{.Content | safeHTML}}
+<div class="container-fluid">
+  <div class="row">
+  	<div class="col-lg-8">
+	  	<div class="article-detail">
+				{{ template "_internal/schema.html" . }}
 
-      </div>
+				<div class="article-hero">
+					<div class="picture">
+						<img src="/images/{{ index $.Site.Data.images.hash (printf "news/%s.png" .Params.image | lower) }}" alt="{{ .Params.image }}">
+					</div>
+					<div class="article-meta">
+						<h3>
+						{{ .Title }}
+						{{ range .Params.categories }}
+							<div class="btn btn-outline-warning btn-sm float-right mx-2">{{ . }}</div>
+						{{ end }}
+						</h3>
+						<p>{{ .Date.Format "January 2, 2006" }}</p>
+					</div>
+				</div>
+	   		<div class="article-time text-muted">{{ partial "article/meta" . }}</div>
 
-        <div class="">
-            {{ partial "post/byauthor" . }}
-            {{ partial "post/related-content" . }}
+	      <div class="article-body">
+	          {{.Content | safeHTML }}
+	      </div>
+
+        <div class="article-footer text-muted">
+            {{ partial "article/byauthor" . }}
+            {{ partial "article/related-content" . }}
         </div>
 
         {{ if .Site.DisqusShortname }}
@@ -30,8 +40,27 @@
         </article>
         {{ end }}
 
-    </div>
+			</div>
+  	</div>
+  	<div class="col-lg-4 col-md-12 news-sidebar">
+  		<div class="newsletter-box">
+				<div class="font-weight-bold">Get the hottest crypto news and insights</div>
+			</div>
+  		<div class="social-links d-flex justify-content-around">
+				<a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><i class="fa fa-telegram fa-3x" aria-hidden="true"></i></a>
+				<a href="https://t.me/{{.Site.Params.facebook}}" target="_blank"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a>
+				<a href="https://t.me/{{.Site.Params.twitter}}" target="_blank"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+  		</div>
+  		<div class="categories">
+			  {{ range ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
+			  	<a href="{{ .Permalink }}" class="btn btn-outline-warning m-1">{{ .Title}}</a>
+			  {{ end }}
+			</div>
+  	</div>
   </div>
 </div>
+
 {{ end }}
-{{ define "footer"}} {{ partial "footer.html" .}} {{ end }}
+{{ define "footer" }}
+  {{ partial "footer" . }}
+{{ end }}
