--- a/layouts/token-sales/single.html
+++ b/layouts/token-sales/single.html
@@ -303,6 +303,12 @@
 
 				</div>
 			</div>
+
+			{{ if .Site.DisqusShortname }}
+        <article>
+            {{ template "_internal/disqus.html" . }}
+        </article>
+      {{ end }}
 		</div>
 
 	</div>
