--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
 	margin-top: 100px;
 	padding: 80px 0 50px;
-	background: #2c3e50;
+	background: #333;
 	color: #ecf0f1;
 
   .footer-logo {
