--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -1,6 +1,6 @@
 <div class="article">
 	<div class="picture">
-		<a href="{{ .Permalink }}" title="{{ .Title }}">
+		<a href="{{ .URL }}" title="{{ .Title }}">
 			<img src="/images/{{ index $.Site.Data.images.hash (printf "news/%s.png" .Params.image | lower) }}" alt="{{ .Params.image }}">
 		</a>
 	</div>
