implements payment page design WIP

--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -35,9 +35,9 @@
         </div>
 
         {{ if .Site.DisqusShortname }}
-        <article>
+        <div class="disqus">
             {{ template "_internal/disqus.html" . }}
-        </article>
+        </div>
         {{ end }}
 
 			</div>
