--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -110,7 +110,7 @@ $gray-lightest:             #f7f7f9 !default;
 $brand-primary:             #2ecc71;
 $brand-success:             $green !default;
 $brand-info:                $blue !default;
-$brand-warning:             $orange !default;
+$brand-warning:             $yellow !default;
 $brand-danger:              $red !default;
 $brand-inverse:             $gray-dark !default;
 
