--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,5 +18,6 @@
 @import 'pages/news-single';
 @import 'pages/token-sales-list';
 @import 'pages/tokens-single';
+@import 'pages/premium';
 @import 'layout/header';
 @import 'layout/footer';
