adds social media images, updates social media links, footer social icons and news social icons

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -23,9 +23,9 @@
 			</div>
 			<div class="col-sm-12 col-md-5 col-social">
 				<ul class="footer-nav">
-					<li class="text-center"><a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><i class="fa fa-telegram fa-2x" aria-hidden="true"></i>Join our Telegram</a></li>
-					<li class="text-center"><a href="https://t.me/{{.Site.Params.facebook}}" target="_blank"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i>Like our Facebook</a></li>
-					<li class="text-center"><a href="https://t.me/{{.Site.Params.twitter}}" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i>Follow us on Twitter</a></li>
+					<li><a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/telegram.svg" }}">Join our Telegram</a></li>
+					<li><a href="https://www.facebook.com/{{.Site.Params.facebook}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/facebook.svg" }}">Like our Facebook</a></li>
+					<li><a href="https://twitter.com/{{.Site.Params.twitter}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/twitter.svg" }}">Follow us on Twitter</a></li>
 				</ul>
 			</div>
 		</div>
