--- a/layouts/news/list.html
+++ b/layouts/news/list.html
@@ -24,13 +24,13 @@
 				<div class="font-weight-bold">Get the hottest crypto news and insights</div>
 			</div>
   		<div class="social-links d-flex justify-content-around">
-				<a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><i class="fa fa-telegram fa-3x" aria-hidden="true"></i></a>
-				<a href="https://t.me/{{.Site.Params.facebook}}" target="_blank"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a>
-				<a href="https://t.me/{{.Site.Params.twitter}}" target="_blank"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+				<a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/telegram.svg" }}"></a>
+				<a href="https://www.facebook.com/{{.Site.Params.facebook}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/facebook.svg" }}"></a>
+				<a href="https://twitter.com/{{.Site.Params.twitter}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/twitter.svg" }}"></a>
   		</div>
   		<div class="categories">
 			  {{ range ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
-			  	<a href="{{ .Permalink }}" class="btn btn-outline-warning m-1">{{ .Title}}</a>
+			  	<a href="{{ .URL }}" class="btn btn-outline-warning m-1">{{ .Title}}</a>
 			  {{ end }}
 			</div>
   	</div>
