--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -62,19 +62,14 @@
 	}
 
 	.col-social {
-		margin-top: 30px;
+		margin-top: 1rem;
 
 		li {
-    	// float: left!important;
-    	padding-left: 15px;
+    	padding-left: 2rem;
 
-    	&:first-child {
-				padding-left: 0px;
-    	}
-
-    	i {
-    		margin-right: 10px;
-    		vertical-align: middle;
+    	img {
+				height: 50px;
+    		margin-right: 1rem;
     	}
 		}
 	}
