--- a/src/scss/pages/_landing.scss
+++ b/src/scss/pages/_landing.scss
@@ -20,7 +20,7 @@
     	padding-top: 15px;
     	text-align: center;
     	font-size: 22px;
-	    color: $brand-primary;
+	    color: $orange;
 	    line-height: 22px;
 	    letter-spacing: 0.03em;
     }
