--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import 'components/flex-row';
 @import 'components/exchange-card';
 @import 'components/pagination';
+@import 'components/newsletter-form';
 @import 'pages/landing';
 @import 'pages/news-list';
 @import 'pages/news-single';
