--- a/src/scss/pages/_premium.scss
+++ b/src/scss/pages/_premium.scss
@@ -73,10 +73,10 @@
 	}
 
 	.business-pack {
-		border-top: 6px solid $yellow;
+		border-top: 6px solid $orange;
 
 		h2 {
-			color: $yellow;
+			color: $orange;
 		}
 	}
 
