--- a/layouts/news/list.html
+++ b/layouts/news/list.html
@@ -19,20 +19,24 @@
 
 			</div>
   	</div>
-  	<div class="col-lg-4 col-md-12 news-sidebar">
-  		<div class="newsletter-box">
-				<div class="font-weight-bold">Get the hottest crypto news and insights</div>
+  	<div class="col-lg-4 col-md-12">
+			<div class="news-sidebar">
+	  		<div class="newsletter-box">
+					<div class="font-weight-bold">Get the hottest crypto news and insights</div>
+					{{ partial "newsletter-form" . }}
+				</div>
+	  		<div class="social-links d-flex justify-content-around">
+					<a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/telegram.svg" }}"></a>
+					<a href="https://www.facebook.com/{{.Site.Params.facebook}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/facebook.svg" }}"></a>
+					<a href="https://twitter.com/{{.Site.Params.twitter}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/twitter.svg" }}"></a>
+	  		</div>
+	  		<div class="categories">
+				  {{ range ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
+				  	<a href="{{ .URL }}" class="btn btn-outline-warning m-1">{{ .Title}}</a>
+				  {{ end }}
+				</div>
 			</div>
-  		<div class="social-links d-flex justify-content-around">
-				<a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/telegram.svg" }}"></a>
-				<a href="https://www.facebook.com/{{.Site.Params.facebook}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/facebook.svg" }}"></a>
-				<a href="https://twitter.com/{{.Site.Params.twitter}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/twitter.svg" }}"></a>
-  		</div>
-  		<div class="categories">
-			  {{ range ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
-			  	<a href="{{ .URL }}" class="btn btn-outline-warning m-1">{{ .Title}}</a>
-			  {{ end }}
-			</div>
+
   	</div>
   </div>
 </div>
