--- a/src/scss/pages/_news-list.scss
+++ b/src/scss/pages/_news-list.scss
@@ -100,13 +100,11 @@
 }
 
 .news-sidebar {
+  position: sticky;
+  top: 10px;
 	padding-top: 40px;
 	text-align: center;
 
-	.newsletter-box {
-		height: 200px;
-
-	}
 	.social-links {
 		margin-top: 20px;
 
