--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,11 +14,14 @@
 @import 'components/exchange-card';
 @import 'components/pagination';
 @import 'components/newsletter-form';
+@import 'components/newsletter-bleed';
 @import 'pages/landing';
 @import 'pages/news-list';
 @import 'pages/news-single';
 @import 'pages/token-sales-list';
-@import 'pages/tokens-single';
+@import 'pages/token-sales-single';
+@import 'pages/tokens-list';
 @import 'pages/premium';
+@import 'pages/exchanges-list';
 @import 'layout/header';
 @import 'layout/footer';
