--- a/src/scss/pages/_token-sales-list.scss
+++ b/src/scss/pages/_token-sales-list.scss
@@ -1,4 +1,7 @@
-.token-sales-disclaimer {
-  font-weight: 400;
-}
+.token-sales {
+	margin-bottom: 90px;
 
+	.token-sales-disclaimer {
+	  font-weight: 400;
+	}
+}
