--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -3,64 +3,66 @@
 
 {{ define "main" }}
 
-<div class="container-fluid">
-  <div class="row">
-  	<div class="col-lg-8">
-	  	<div class="article-detail">
-				{{ template "_internal/schema.html" . }}
+<div class="news-single">
+	<div class="container-fluid">
+	  <div class="row">
+	  	<div class="col-lg-8">
+		  	<div class="article-detail">
+					{{ template "_internal/schema.html" . }}
 
-				<div class="article-hero">
-					<div class="picture">
-						<img src="/images/{{ index $.Site.Data.images.hash (printf "news/%s.png" .Params.image | lower) }}" alt="{{ .Params.image }}">
+					<div class="article-hero">
+						<div class="picture">
+							<img src="/images/{{ index $.Site.Data.images.hash (printf "news/%s.png" .Params.image | lower) }}" alt="{{ .Params.image }}">
+						</div>
+						<div class="article-meta">
+							<h3>
+							{{ .Title }}
+							{{ range .Params.categories }}
+								<div class="btn btn-outline-warning btn-sm float-right mx-2">{{ . }}</div>
+							{{ end }}
+							</h3>
+							<p>{{ .Date.Format "January 2, 2006" }}</p>
+						</div>
 					</div>
-					<div class="article-meta">
-						<h3>
-						{{ .Title }}
-						{{ range .Params.categories }}
-							<div class="btn btn-outline-warning btn-sm float-right mx-2">{{ . }}</div>
-						{{ end }}
-						</h3>
-						<p>{{ .Date.Format "January 2, 2006" }}</p>
+		   		<div class="article-time text-muted">{{ partial "article/meta" . }}</div>
+
+		      <div class="article-body">
+		          {{.Content | safeHTML }}
+		      </div>
+
+	        <div class="article-footer text-muted">
+	            {{ partial "article/byauthor" . }}
+	            {{ partial "article/related-content" . }}
+	        </div>
+
+	        {{ if .Site.DisqusShortname }}
+	        <div class="disqus">
+	            {{ template "_internal/disqus.html" . }}
+	        </div>
+	        {{ end }}
+
+				</div>
+	  	</div>
+	  	<div class="col-lg-4 col-md-12">
+	  		<div class="news-sidebar">
+		  		<div class="newsletter-box">
+						<div class="font-weight-bold">Get the hottest crypto news and insights</div>
+						{{ partial "newsletter-form" . }}
+					</div>
+		  		<div class="social-links d-flex justify-content-around">
+						<a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/telegram.svg" }}"></a>
+						<a href="https://www.facebook.com/{{.Site.Params.facebook}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/facebook.svg" }}"></a>
+						<a href="https://twitter.com/{{.Site.Params.twitter}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/twitter.svg" }}"></a>
+		  		</div>
+		  		<div class="categories">
+					  {{ range ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
+					  	<a href="{{ .URL }}" class="btn btn-outline-warning m-1">{{ .Title}}</a>
+					  {{ end }}
 					</div>
 				</div>
-	   		<div class="article-time text-muted">{{ partial "article/meta" . }}</div>
-
-	      <div class="article-body">
-	          {{.Content | safeHTML }}
-	      </div>
-
-        <div class="article-footer text-muted">
-            {{ partial "article/byauthor" . }}
-            {{ partial "article/related-content" . }}
-        </div>
-
-        {{ if .Site.DisqusShortname }}
-        <div class="disqus">
-            {{ template "_internal/disqus.html" . }}
-        </div>
-        {{ end }}
-
-			</div>
-  	</div>
-  	<div class="col-lg-4 col-md-12">
-  		<div class="news-sidebar">
-	  		<div class="newsletter-box">
-					<div class="font-weight-bold">Get the hottest crypto news and insights</div>
-					{{ partial "newsletter-form" . }}
-				</div>
-	  		<div class="social-links d-flex justify-content-around">
-					<a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/telegram.svg" }}"></a>
-					<a href="https://www.facebook.com/{{.Site.Params.facebook}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/facebook.svg" }}"></a>
-					<a href="https://twitter.com/{{.Site.Params.twitter}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/twitter.svg" }}"></a>
-	  		</div>
-	  		<div class="categories">
-				  {{ range ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
-				  	<a href="{{ .URL }}" class="btn btn-outline-warning m-1">{{ .Title}}</a>
-				  {{ end }}
-				</div>
-			</div>
-  	</div>
-  </div>
+	  	</div>
+	  </div>
+	</div>
 </div>
 
 {{ end }}
