--- a/layouts/partials/newsletter-form.html
+++ b/layouts/partials/newsletter-form.html
@@ -2,7 +2,7 @@
 	<form action="//tropyc.us15.list-manage.com/subscribe/post?u=24fb0dbeddc7ce4265c8879b9&id=cd00a11da3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 		<div id="mc_embed_signup_scroll">
 			<label for="mce-EMAIL" class="font-weight-bold">Subscribe to our newsletter</label>
-			<input type="email" value="" name="EMAIL" class="email form-control w-75 mx-auto" id="mce-EMAIL" placeholder="email address" required>
+			<input type="email" value="" name="EMAIL" class="email form-control w-75 mx-auto text-center" id="mce-EMAIL" placeholder="email address" required>
 			<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 			<div style="position: absolute; left: -5000px;" aria-hidden="true">
 				<input type="text" name="b_24fb0dbeddc7ce4265c8879b9_cd00a11da3" tabindex="-1" value="">
