--- a/layouts/token-sales/list.html
+++ b/layouts/token-sales/list.html
@@ -12,7 +12,7 @@
     {{ .Content }}
   </div>
 </div>
-<div class="container">
+<div class="container token-sales">
 
   <table class="token-table table table-responsive table-striped table-hover">
     <thead>
