--- a/layouts/tokens/list.html
+++ b/layouts/tokens/list.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container tokens">
 
   <table class="token-table table table-responsive table-striped table-hover">
     <thead>
