--- a/src/scss/pages/_landing.scss
+++ b/src/scss/pages/_landing.scss
@@ -5,6 +5,8 @@
   flex-wrap: wrap;
 
   .featurebox {
+  	margin-left: auto;
+  	margin-right: auto;
   	display: flex;
     align-items: center;
     width: 300px;
@@ -18,7 +20,6 @@
     h2 {
     	text-transform: uppercase;
     	padding-top: 15px;
-    	text-align: center;
     	font-size: 22px;
 	    color: $orange;
 	    line-height: 22px;
@@ -59,7 +60,7 @@
 
 .instructions, .funding-comparison {
 	margin-top: 60px;
-	margin-bottom: 60px;
+	margin-bottom: 90px;
 }
 
 .step, .point {
