--- a/src/scss/pages/_news-list.scss
+++ b/src/scss/pages/_news-list.scss
@@ -1,102 +1,105 @@
-.article-featured {
-	a {
-		position: relative;
-    display: block;
+.news {
+	margin-bottom: 90px;
 
-	  &:hover {
-			text-decoration: none;
-			opacity: 0.8;
+	.article-featured {
+		a {
+			position: relative;
+	    display: block;
+
+		  &:hover {
+				text-decoration: none;
+				opacity: 0.8;
+			}
 		}
-	}
 
-	.picture {
-    float: none;
-    height: auto;
-    min-height: 1px;
-    width: 100%;
-
-    img {
-    	width: 100%;
-    	height: 400px;
-    	object-fit: cover;
-    }
-	}
-
-	.article-meta {
-		position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    color: #fff;
-    background: linear-gradient(rgba(0,0,0,0) 0,rgba(0,0,0,.002) 1.8%,rgba(0,0,0,.008) 4.8%,rgba(0,0,0,.021) 9%,rgba(0,0,0,.042) 13.9%,rgba(0,0,0,.075) 19.8%,rgba(0,0,0,.126) 27%,rgba(0,0,0,.194) 35%,rgba(0,0,0,.278) 43.5%,rgba(0,0,0,.382) 53%,rgba(0,0,0,.541) 66%,rgba(0,0,0,.738) 81%,#000 100%);
-    padding: 90px 20px 15px;
-
-    h3 {
-    	font-size: 32px;
-    	text-overflow: ellipsis;
-    	text-shadow: 0 -1px 0 rgba(0,0,0,.65);
-    }
-
-    p {
-    	font-size: 16px;
-    	color: $gray-light;
-    }
-	}
-}
-
-.article {
-	width: 100%;
-	display: table;
-  padding: 15px 30px 15px 0;
-  border-bottom: solid 1px #EEE;
-
-  .picture {
-  	width: 190px;
-    margin: 0 30px 0 0;
-    display: table-cell;
-    vertical-align: middle;
-
-  	a {
-    	position: relative;
-    	display: block;
-    	min-height: 100%;
-    	min-width: 100%;
-    	border-radius: 2px;
-
-    	&:hover {
-    		opacity: 0.8;
-    	}
+		.picture {
+	    float: none;
+	    height: auto;
+	    min-height: 1px;
+	    width: 100%;
 
 	    img {
 	    	width: 100%;
-	    	max-height: 130px;
-	    	border-radius: 4px;
+	    	height: 400px;
+	    	object-fit: cover;
 	    }
-  	}
-  }
+		}
 
-  .article-info {
-    display: table-cell;
-    vertical-align: top;
-    padding-left: 15px;
+		.article-meta {
+			position: absolute;
+	    bottom: 0;
+	    left: 0;
+	    right: 0;
+	    color: #fff;
+	    background: linear-gradient(rgba(0,0,0,0) 0,rgba(0,0,0,.002) 1.8%,rgba(0,0,0,.008) 4.8%,rgba(0,0,0,.021) 9%,rgba(0,0,0,.042) 13.9%,rgba(0,0,0,.075) 19.8%,rgba(0,0,0,.126) 27%,rgba(0,0,0,.194) 35%,rgba(0,0,0,.278) 43.5%,rgba(0,0,0,.382) 53%,rgba(0,0,0,.541) 66%,rgba(0,0,0,.738) 81%,#000 100%);
+	    padding: 90px 20px 15px;
 
-    h3 a:first-child {
-    	font-size: 20px;
-    	margin-top: 6px;
-    	margin-bottom: 10px;
+	    h3 {
+	    	font-size: 32px;
+	    	text-overflow: ellipsis;
+	    	text-shadow: 0 -1px 0 rgba(0,0,0,.65);
+	    }
 
-    	&:hover {
-    		text-decoration: none;
-    		opacity: 0.8;
-    	}
-    }
+	    p {
+	    	font-size: 16px;
+	    	color: $gray-light;
+	    }
+		}
+	}
 
-    .date {
-    	font-size: 12px;
-    	color: $gray;
-    }
-  }
+	.article {
+		width: 100%;
+		display: table;
+	  padding: 15px 30px 15px 0;
+	  border-bottom: solid 1px #EEE;
 
+	  .picture {
+	  	width: 190px;
+	    margin: 0 30px 0 0;
+	    display: table-cell;
+	    vertical-align: middle;
+
+	  	a {
+	    	position: relative;
+	    	display: block;
+	    	min-height: 100%;
+	    	min-width: 100%;
+	    	border-radius: 2px;
+
+	    	&:hover {
+	    		opacity: 0.8;
+	    	}
+
+		    img {
+		    	width: 100%;
+		    	max-height: 130px;
+		    	border-radius: 4px;
+		    }
+	  	}
+	  }
+
+	  .article-info {
+	    display: table-cell;
+	    vertical-align: top;
+	    padding-left: 15px;
+
+	    h3 a:first-child {
+	    	font-size: 20px;
+	    	margin-top: 6px;
+	    	margin-bottom: 10px;
+
+	    	&:hover {
+	    		text-decoration: none;
+	    		opacity: 0.8;
+	    	}
+	    }
+
+	    .date {
+	    	font-size: 12px;
+	    	color: $gray;
+	    }
+	  }
+	}
 }
 
 .news-sidebar {
