--- a/src/scss/pages/_premium.scss
+++ b/src/scss/pages/_premium.scss
@@ -1,14 +1,14 @@
 .premium-packs {
 	min-height: 750px;
 	background: #ffffff;
-	background: -moz-linear-gradient(top, #ffffff 50%, #2ecc71 51%);
-	background: -webkit-linear-gradient(top, #ffffff 50%,#2ecc71 51%);
-	background: linear-gradient(to bottom, #ffffff 50%,#2ecc71 51%);
+	background: -moz-linear-gradient(top, #ffffff 57%, #2ecc71 58%);
+	background: -webkit-linear-gradient(top, #ffffff 57%,#2ecc71 58%);
+	background: linear-gradient(to bottom, #ffffff 57%,#2ecc71 58%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#2ecc71',GradientType=0 );
-	padding: 60px 0;
+	padding: 90px 0;
 
 	h1 {
-		margin-bottom: 60px;
+		margin-bottom: 90px;
 		color: $brand-primary;
 	}
 
@@ -86,5 +86,46 @@
 		h2 {
 			color: $red;
 		}
+	}
+}
+
+.pack-features {
+	margin: 60px 0 90px;
+
+  .featurebox {
+	  margin-left: auto;
+	  margin-right: auto;
+  	display: flex;
+    align-items: center;
+    width: 300px;
+    flex-direction: column;
+
+    img {
+    	padding-top: 30px;
+    	height: 100px;
+    }
+
+    h2 {
+    	text-transform: uppercase;
+    	padding-top: 15px;
+    	font-size: 22px;
+	    color: $orange;
+	    line-height: 22px;
+	    letter-spacing: 0.03em;
+    }
+
+    ul {
+    	list-style: none;
+	    margin-bottom: 0;
+  		padding-left: 0;
+    }
+
+    li {
+    	text-align: center;
+	    letter-spacing: 0.1em;
+	    margin-top: 15px;
+	    font-weight: 500;
+	    font-size: 15px;
+    }
 	}
 }
