--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -2,44 +2,27 @@
 {{ define "header"}} {{ partial "header" .}} {{end}}
 {{ define "main"}}
 <div class="container">
-  <div class="main">
-    <div class="hero">
+  <div>
       <h1>{{ .Title }}</h1>
       <p>
         {{ .Params.bref | safeHTML }}
       </p>
-    </div>
-    <!-- <div class="content">
-      {{ .Content }}
-    </div> -->
     <div class="container">
-      <div class="row">
-        {{ if .Sections }}
-          {{ range .Sections }}
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://unsplash.it/200/?random');">
-              <div class="card-description">
-                <h2>{{ .Title }}</h2>
-                <p>{{ .Params.description }}</p>
-              </div>
-              <a class="card-link" href="{{ .URL }}" ></a>
-            </div>
-          </div>
-          {{ end }}
-        {{ else }}
-          {{ range .Data.Pages.ByWeight }}
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://unsplash.it/200/?random');">
-              <div class="card-description">
-                <h2>{{ .Title }}</h2>
-                <p>{{ .Params.description }}</p>
-              </div>
-              <a class="card-link" href="{{ .URL }}" ></a>
-            </div>
-          </div>
-          {{ end }}
-        {{ end }}
-      </div>
+	    {{ if .Sections }}
+	      {{ range .Sections }}
+	        <a href="{{ .URL }}">
+	        	<h2>{{ .Title }}</h2>
+	        	<p>{{ .Params.description }}</p>
+	        </a>
+	      {{ end }}
+	    {{ else }}
+	      {{ range .Data.Pages.ByWeight }}
+	        <a href="{{ .URL }}">
+	        	<h2>{{ .Title }}</h2>
+	        	<p>{{ .Params.description }}</p>
+	      	</a>
+	      {{ end }}
+	    {{ end }}
     </div>
   </div>
 </div>
