--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,11 +8,11 @@
     <h1>{{.Title }}</h1>
       <p>{{.Params.description}}</p>
   </div>
-  <ul class="posts">
+  <div class="content">
 
    {{ .Content }}
 
-  </ul>
+  </div>
 </div>
 {{ end }}
 {{ define "footer" }}
