--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,7 @@
 @import 'pages/landing';
 @import 'pages/news-list';
 @import 'pages/news-single';
+@import 'pages/crypto-101-list';
 @import 'pages/token-sales-list';
 @import 'pages/token-sales-single';
 @import 'pages/tokens-list';
