--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>{{ block "title" . }}{{ .Title }} | {{ .Site.Title }}{{ end }} | Tropyc</title>
+  <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="320">
 
   {{ with .Description }}
   <meta name="description" content="{{ . }}"> {{ end }}
