--- a/layouts/crypto-101/single.html
+++ b/layouts/crypto-101/single.html
@@ -1,6 +1,7 @@
 {{ define "title"}} {{ .Title}} {{end}}
 {{ define "header"}} {{ partial "header" .}} {{end}}
 {{ define "main"}}
+
 <div class="container">
   <div class="hero">
     <h1> {{ .Title }} </h1>
@@ -12,6 +13,7 @@
   {{ partial "toc" .}}
 
   {{ .Content}}
+
 <!-- Inject script tag in this template  -->
   {{if .Params.script}}
    {{ $script := (delimit (slice "scripts" .Params.script) "/")}}
@@ -19,4 +21,7 @@
   {{end }}
   </div>
 </div>
+
 {{ end }}
+
+{{ define "footer"}} {{ partial "footer" .}} {{end}}
