--- a/layouts/exchanges/list.html
+++ b/layouts/exchanges/list.html
@@ -18,9 +18,9 @@
     <div class="col-md-6 col-xl-5">
       <div class="exchange-card card card-outline-primary mb-3">
       	<div class="card-header">
-    			<div class="exchange-logo" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "exchange-logos/%s.png" .name | lower) }}')"></div>
+    			<div class="exchange-logo" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "exchange-logos/%s.png" .name | urlize) }}')"></div>
     			<h2 class="text-center">{{ .name }}</h2>
-    			<div class="corner-text" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "exchange-feature/%s.png" .cornerIcon | lower) }}')">
+    			<div class="corner-text" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "exchange-feature/%s.png" .cornerIcon | urlize) }}')">
    				{{ .cornerText }}
    				</div>
       	</div>
