--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -12,7 +12,7 @@
 
 					<div class="article-hero">
 						<div class="picture">
-							<img src="/images/{{ index $.Site.Data.images.hash (printf "news/%s.png" .Params.image | lower) }}" alt="{{ .Params.image }}">
+							<img src="/images/{{ index $.Site.Data.images.hash (printf "news/%s.png" .Params.image | urlize) }}" alt="{{ .Params.image }}">
 						</div>
 						<div class="article-meta">
 							<h3>
