--- a/layouts/token-sales/list.html
+++ b/layouts/token-sales/list.html
@@ -30,7 +30,7 @@
     <tbody>
       {{ range .Data.Pages.ByWeight }}
         <tr>
-          <td class="token-name" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "token-logos/%s.png" .Params.name | lower) }}');"><a href="{{ .URL }}" class="label-emphasis">{{ .Params.name }}</a></td>
+          <td class="token-name" style="background-image: url('/images/{{ index $.Site.Data.images.hash (printf "token-logos/%s.png" .Params.name | urlize) }}');"><a href="{{ .URL }}" class="label-emphasis">{{ .Params.name }}</a></td>
           <td class="text-uppercase">{{ .Params.risk }}</td>
           <td>{{ .Params.fiatValuation }}</td>
           <td>{{ .Params.platform }}</td>
