--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import 'components/pagination';
 @import 'components/newsletter-form';
 @import 'components/newsletter-bleed';
+@import 'pages/default-single';
 @import 'pages/landing';
 @import 'pages/news-list';
 @import 'pages/news-single';
@@ -24,5 +25,6 @@
 @import 'pages/tokens-list';
 @import 'pages/premium';
 @import 'pages/exchanges-list';
+@import 'pages/contact-single';
 @import 'layout/header';
 @import 'layout/footer';
