--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,7 +17,8 @@
 			<div class="col-sm-6 col-md-2">
 				<h3 class="footer-nav-title">Useful Links</h3>
 				<ul class="footer-nav">
-					<li><a href="/rating-framework/">Rating framework</a></li>
+					<li><a href="/rating-framework/">Rating Framework</a></li>
+					<li><a href="/token-sale-variables/">Token Sale Variables</a></li>
 					<li><a href="/disclaimer/">Disclaimer</a></li>
 				</ul>
 			</div>
