--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -4,3 +4,13 @@
   color: #6f8691;
   margin-bottom: 10px;
 }
+
+.content {
+	>h2:not(:first-child) {
+    margin-top: 3rem;
+  }
+
+  >h3 {
+    margin-top: 1.5rem;
+  }
+}
