adds affiliate links to exchanges page and data

--- a/layouts/exchanges/list.html
+++ b/layouts/exchanges/list.html
@@ -53,7 +53,7 @@
             </div>
           </div>
           <div class="text-center">
-          	<a href="#" class="btn btn-primary btn-lg">Sign Up</a>
+          	<a href="{{ .affiliateLink }}" target="_blank" class="btn btn-primary btn-lg">Go</a>
           </div>
         </div>
       </div>
