improves table of content on crypto 101 pages

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import 'components/newsletter-form';
 @import 'components/newsletter-bleed';
 @import 'components/toc';
+@import 'components/news-sidebar';
 @import 'pages/landing';
 @import 'pages/news-list';
 @import 'pages/news-single';
