--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,5 +1,5 @@
 {{ if and (gt .WordCount 400 ) (ne .Params.toc "false") }}
-	<aside>
+	<aside class="toc">
 		{{.TableOfContents}}
 	</aside>
 {{ end }}
