--- a/src/scss/components/_toc.scss
+++ b/src/scss/components/_toc.scss
@@ -1,14 +1,30 @@
-#TableOfContents {
+.toc {
+	position: sticky;
+	top: 10px;
+	border-left: 1px solid #CCC;
+	margin-bottom: 20px;
 
-	ul {
-		padding-left: 0;
-  	margin-left: 0;
-  	list-style-type: none;
+	#TableOfContents {
+		padding: 1rem;
 
-  	li {
-    	display: block;
-    	margin-bottom: .375em;
-    	line-height: 1.375;
-  	}
-  }
+		ul {
+			padding-left: 0;
+	  	margin-left: 0;
+	  	list-style-type: none;
+
+	  	li {
+	    	margin-bottom: 1rem;
+	    	line-height: 1.375;
+
+	    	>ul {
+					margin-top: 1rem;
+
+					>li {
+	    			font-size: 90%;
+	    			padding-left: 1rem;
+	    		}
+	    	}
+	  	}
+	  }
+	}
 }
